--- a/04/figcaption-1.html
+++ b/04/figcaption-1.html
@@ -7,16 +7,18 @@
 <body>
   <!-- Do it! 각 이미지마다 설명글 붙이기 -->
   <figure>
-    <img src="images/spring.png" alt="제주의 봄">
+    <img src="images/bg.jpg" alt="제주의 봄" width="150px">
+    <figcaption>가장 먼저 봄을 맞이하는 제주도</figcaption>
   </figure>
   <figure>
-    <img src="images/summer.png" alt="제주의 여름">
+    <img src="images/top.jpg" alt="제주의 여름" width="150px">
+    <figcaption>뜨거운 태양을 닮은 해바라기</figcaption>
   </figure>
   <figure>
-    <img src="images/fall.png" alt="제주의 가을">
+    <img src="images/link.png" alt="제주의 가을">
   </figure>
   <figure>
-    <img src="images/winter.png" alt="제주의 겨울">
+    <img src="images/tangerines.jpg" alt="제주의 겨울">
   </figure>
 </body>
 </html>
