--- a/04/figcaption-2.html
+++ b/04/figcaption-2.html
@@ -7,10 +7,11 @@
 <body>
   <!-- Do it! 여러 이미지에 하나의 설명글 붙이기 -->
   <figure>
-    <img src="images/spring.png" alt="제주의 봄">
-    <img src="images/summer.png" alt="제주의 여름">
-    <img src="images/fall.png" alt="제주의 가을">
-    <img src="images/winter.png" alt="제주의 겨울">
+    <img src="images/bg.jpg" alt="제주의 봄" width="100px">
+    <img src="images/top.jpg" alt="제주의 여름" width="100px">
+    <img src="images/pf.jpg" alt="제주의 가을" width="100px">
+    <img src="images/tangerines.jpg" alt="제주의 겨울" width="100px">
+    <figcaption>제주도의 사계절</figcaption>
   </figure>
 </body>
 </html>
