--- a/04/obj.html
+++ b/04/obj.html
@@ -7,6 +7,7 @@
 <body>
   <h1>웹 문서에 PDF 파일 삽입하기</h1>
   <!-- Do it! object 태그를 사용해 product.pdf 파일 삽입하기 -->
-
+  <audio src="medias/spring.mp3" controls></audio>
+  <embed width="900" height="800" src="product.pdf">
 </body>
 </html>
