--- a/04/text.html
+++ b/04/text.html
@@ -7,6 +7,18 @@
 </head>
 <body>
   <!-- 다양한 텍스트 태그 사용하기 -->
-  
+  <h1>레드향</h1>
+  <p>껍질에 붉은빛이 돌아 <b>레드향</b>이라 불린다.</p>
+  <p>레드향은 <em>한라봉과 귤을 교배</em>한 것으로 <br>일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
+  <blockquote>비타민 C와 비타민 P가 풍부해<br>
+  <strong>혈액순환, 감기예방</strong> 등에 좋은 것으로 알려져 있다.<br><small>구라임.</small></blockquote>
+  <abbr title ="Artificial Intelligence">AI</abbr>
+  <p><code>push()</code> 함수</p>
+  <del>삭제된 내용</del>
+  <ins>추가된 내용</ins>
+  <p>껍질에 붉은빛이 돌아 <mark>레드향</mark>이라 불린다.</p>
+  <p>가격 : 13,000원<small>(부가세 별도)</small></p>
+  <p>물의 화학식은 H<sub>2</sub>O입니다.</p>
+  <p>E = mc<sup>2</sup></p>
 </body>
 </html>
