--- a/05/range.html
+++ b/05/range.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <h1>소리 조절하기</h1>
- 
   <form>
     <!-- Do it! 슬라이드 막대를 사용해 범위 조절하기 -->
-
+    <input type="range" min="0" max="100" step="1" value="20" oninput="document.getElementById('selected-value').innerText = this.value">
+    <span id="selected-value">20</span>
   </form>
 </body>
 </html>
