--- a/07/font.html
+++ b/07/font.html
@@ -4,7 +4,17 @@
   <meta charset="UTF-8">
   <title>상품 소개 페이지</title>
   <!-- 글자 크기 지정하기 - 절대 크기 -->
-  
+  <style>
+    * {
+      font-size: 16px;
+    }
+    h1 {
+      font-size: 2rem;
+    }
+    p {
+      font-size: 20px;
+    }
+  </style>
 </head>
 <body>
   <h1>레드향</h1>
