--- a/07/webfont.html
+++ b/07/webfont.html
@@ -5,21 +5,24 @@
   <title>웹 폰트 사용하기</title>
   <style>
     /* Do it! 구글 폰트 사용하기 */
-
+    @import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
     body {
       background:url('images/bg.jpg') no-repeat fixed;
       background-size:cover;
       text-align:center;
     }
     h1 {
-      font-size:120px; 
+      font-size:120px;
       color: #fff;  
+    }
+    .html {
+      font-family: "Gaegu", sans-serif;
     }
   </style>
 
 </head>
 <body>
-  <h1>HTML</h1>
-  <h1>CSS</h1>
+  <h1 class="html">HTML</h1>
+  <h1 class="html">CSS</h1>
 </body>
 </html> 
