--- a/07/icon.html
+++ b/07/icon.html
@@ -21,19 +21,22 @@
 			}			
 		</style>
 		<!-- Do it! 아이콘 폰트 CDN 링크하기 -->
-		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
 		<nav>
 			<ul>
 				<!-- Do it! 메뉴에 아이콘 폰트 추가하기 -->
-				<li>				
+				<li>
+					<i class="fa-solid fa-house"></i>				
 					<a href="#">메뉴1</a>
 				</li>
 				<li>
+					<i class="fa-solid fa-house"></i>	
 					<a href="#">메뉴2</a>					
 				</li>
 				<li>
+					<i class="fa-solid fa-house"></i>
 					<a href="#">메뉴3</a>
 				</li>
 			</ul>
